Fix: Custom SpinRow entry overlaps title on hover.

--- a/src/Styles/vui.css
+++ b/src/Styles/vui.css
@@ -33,6 +33,10 @@
     transition: background-color 100ms linear;
 }
 
+.vui-section row:hover .vui-section-spin-row-text {
+    background: transparent;
+}
+
 .vui-section-entry {
     background-color: white;
     outline: none;
@@ -47,7 +51,7 @@
     padding-bottom: 2px;
 }
 
-.vui-section-entry.vui-section-spin-row-text {
+.vui-section-spin-row-text {
     background-color: transparent;
     margin: 0;
 }
